# SISE_x_OPSIE_Security_data_analysis

./: .env  .env.example  .env.exemple  .gitignore  Dockerfile  README.md  app.py  models_creation.ipynb  pyproject.toml  test.py
data/: licite.csv
features/: __init__.py  clustering.py  parser.py
models/: logistic_regression.pkl
pages/: clustering.py  mcp.py  pipeline.py  visualisation.py
preparation/: app.py  parser.py
services/: __init__.py  analysis_pipeline.py  charts.py  clustering_service.py  data_manager.py  mistral_client.py  parser.py
