[project]
name = "sise-x-opsie-security-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "folium>=0.19.0",
    "hdbscan>=0.8.41",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "requests>=2.32.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "streamlit-folium>=0.25.0",
    "umap-learn>=0.5.11",
    "mistralai>=1.0.0",
    "ipykernel>=7.2.0",
    "pyarrow>=23.0.1",
]
